# package-testing

./: README.md  pyproject.toml
helloworld_leorudczenko/: __init__.py  __main__.py  extra.py  myscript.py  testing.py
helloworld_leorudczenko/extra/: __init__.py  myscript2.py
