[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld_leorudczenko"
version = "0.0.1"
description = "A simple library to provide terminal output spacing"
readme = "README.md"
authors = [
    {name = "Leo Rudczenko", email = "leorud@bgs.ac.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["test", "spacing", "text"]
requires-python = ">=3.0"

[project.urls]
"Source Code" = "https://github.com/leorudczenko/package-testing"
"Documentation" = "https://github.com/leorudczenko/package-testing#documentation"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
leorud-spacing = "helloworld_leorudczenko.__main__:main"
