[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld_leorudczenko"
description = "A simple library to provide terminal output spacing"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Leo Rudczenko", email = "leorud@bgs.ac.uk"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["test", "spacing", "text"]
requires-python = ">=3.0"
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/leorudczenko/package-testing"
"Documentation" = "https://github.com/leorudczenko/package-testing#documentation"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
leorud-spacing = "helloworld_leorudczenko.__main__:main"

[tool.setuptools_scm]
