[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld_leorudczenko"
description = "A simple library to provide terminal output spacing"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Leo Rudczenko", email = "leorud@bgs.ac.uk"},
]
license = {text = "LGPL-3.0 license"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["test", "spacing", "text"]
requires-python = ">=3.0"
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/leorudczenko/package-testing"
"Documentation" = "https://github.com/leorudczenko/package-testing#documentation"

[project.optional-dependencies]
dev = ["build", "twine"]
req = ["requests"]
dev_n = ["twine"]
test = ["pytest", "flake8"]

[project.scripts]
leorud-spacing = "helloworld_leorudczenko.__main__:main"

[tool.setuptools_scm]
# This can be empty, it's presence indicates that the version should come from git
# Errors can occur if new commits are made after the git release version
# Therefore, it is best to make all commits, then release git version, then pull new tag, then run build

[tools.setuptools.packages.find]
where = ["helloworld_leorudczenko"]
include = ["extra"]
namespaces = false
